<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.docdoku.training.CreateInvoiceActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/numberHint"
        android:inputType="textPersonName"
        android:textSize="18sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextSupplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNumber"
        android:layout_below="@+id/editTextNumber"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/supplierHint" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextSupplier"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/amountHint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextAmount"
        android:layout_below="@+id/editTextAmount"
        android:layout_marginTop="38dp"
        android:text="@string/okButton"
        android:onClick="onCreateInvoice" />

</RelativeLayout>
